apps/common/homeassistant/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha
  namespace: homeassistant
spec:
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
  type: LoadBalancer
  ports:
    - name: ha-ui
      port: 8123
      protocol: TCP
