apps/common/homeassistant/allow-ext-egress-fglair-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ext-egress-fglair"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  egress:
  - toFQDNs:
    - matchPattern: "user-field.aylanetworks.com" # Fujitsu AC HA component
